--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     username: sa
     password: password
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     ddl-auto: create-drop
     show-sql: true
   h2:
