--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,5 +7,9 @@ spring:
     username: postgres
     password: postgres
   jpa:
-    ddl-auto: update
+    ddl-auto: create-drop
     show-sql: true
+
+customer:
+  api:
+    url: http://localhost:666/api/customers
