--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,8 @@ spring:
     username: postgres
     password: postgres
   jpa:
-    ddl-auto: update
+    hibernate:
+      ddl-auto: update
     show-sql: true
 
 customer:
