feat: Sent message to create order

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -11,6 +11,11 @@ spring:
   h2:
     console:
     enabled: true
+  kafka:
+    bootstrap-servers: localhost:9092
+    group-id: order-service
+    username: admin
+    password: admin
 
 customer:
   api:
